--- a/app/styles/form.scss
+++ b/app/styles/form.scss
@@ -2,14 +2,73 @@
   display: flex;
   justify-content: center;
   background-color: #ffffff;
-  width: 40vw;
+  width: 30vw;
   height: 80vh;
   border-radius: 20px;
   font-weight: 400;
+
+  #content-form {
+    width: 26vw;
+  }
 
   h1 {
     font-family: "Inter", sans-serif;
     font-weight: 600;
     font-size: 2.5rem;
+  }
+
+  #content-main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 1.5em;
+
+    img {
+      width: 213px;
+      height: 124px;
+    }
+  }
+
+  #input-first {
+    margin-top: 0;
+  }
+
+  .input-group {
+    display: flex;
+    flex-direction: column;
+    font-family: "Nunito", sans-serif;
+    font-weight: 400;
+
+    input {
+      border: 0;
+      border: 2px solid #aaaaaa;
+      border-radius: 4px;
+      padding-left: 0.8em;
+      height: 40px;
+      font-size: 1em;
+    }
+
+    #phone {
+      width: 7vw;
+    }
+
+    #email {
+      width: 16vw;
+    }
+  }
+
+  .split-session {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2em;
+
+    #password {
+      width: 16vw;
+    }
+
+    #birthday {
+      width: 7.2vw;
+    }
   }
 }
