--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Nunito&display=swap");
 @import "./form.scss";
+@import "./footer.scss";
 
 body {
   margin: 0;
